--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ea474a</color>
-    <color name="colorPrimaryDark">#cf2a2d</color>
+    <color name="colorPrimaryDark">#ea474a</color>
     <color name="colorAccent">#1e344b</color>
 
     <color name="colorBackground">#f9f9fa</color>
@@ -9,4 +9,5 @@
     <color name="colorTextTitle">#262626</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
+    <color name="blue">#387dff</color>
 </resources>
