--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -1,64 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+   >
 
     <data>
 
     </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/white"
+        android:layout_marginTop="?actionBarSize"
         tools:context=".ui.fragment.LanguageFragment">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="?actionBarSize"
+            android:backgroundTint="@color/colorPrimary"
+            android:elevation="@dimen/_5sdp"
+            android:padding="@dimen/_5sdp"
+            app:cardElevation="@dimen/_5sdp"
+            app:cardUseCompatPadding="true"
+            android:layout_marginTop="@dimen/_20sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/Language_txt_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/_20sdp"
-                android:text="@string/Language_fragment_txt_Title"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_26ssp" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".ui.fragment.LanguageFragment">
 
-            <Button
-                android:id="@+id/Language_btn_ar"
+                <TextView
+                    android:id="@+id/Language_txt_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_20sdp"
+                    android:text="@string/Language_fragment_Text_Title"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_26ssp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                android:layout_width="@dimen/_200sdp"
-                android:layout_height="@dimen/_70sdp"
-                android:drawableEnd="@drawable/ic_language"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/white"
-                android:text="@string/Language_fragment_btn_ar"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/_16ssp"
-                app:cornerRadius="@dimen/_10sdp" />
 
-            <Button
-                android:id="@+id/Language_btn_en"
-                android:layout_width="@dimen/_200sdp"
-                android:layout_height="@dimen/_70sdp"
-                android:drawableEnd="@drawable/ic_language"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/white"
-                android:text="@string/Language_fragment_btn_en"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/_16ssp"
-                app:cornerRadius="@dimen/_10sdp"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                <Spinner
+                    android:id="@+id/languages_spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/Language_txt_title" />
 
-        </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/news_featur"
+            android:layout_marginTop="@dimen/_20sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
