--- a/app/src/main/res/layout/fragment_no_internet.xml
+++ b/app/src/main/res/layout/fragment_no_internet.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?actionBarSize"
-        android:background="@color/colorBackground">
+        android:background="@color/white">
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,13 +27,21 @@
                 app:srcCompat="@drawable/niinternet" />
 
             <TextView
-                android:id="@+id/txt_no_internet"
+                android:id="@+id/fragment_noInternet_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activity_main_text_no_net"
+                android:gravity="center"
+                android:text="@string/fragment_noInternet_text_no_net"
                 android:textColor="@color/colorPrimary"
                 android:fontFamily="sans-serif"
                 android:textSize="@dimen/_18ssp" />
+        <Button
+            android:id="@+id/fragment_noInternet_btn_retry"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_noInternet_btn_retry"
+            android:fontFamily="sans-serif"
+            android:textSize="@dimen/_14ssp"/>
         </LinearLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
