--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,10 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <item android:id="@+id/search"
-    android:orderInCategory="100"
     android:title="@string/menu_main_search"
     android:icon="@drawable/ic_search"
+    app:actionViewClass="androidx.appcompat.widget.SearchView"
     app:showAsAction="collapseActionView|always"
-    app:actionViewClass="android.widget.SearchView" />
+    android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
+/>
 
 </menu>
